<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--     	系统相关 -->
    <string name="app_name">DirPlayer</string>
    <string name="bottom_about">Simple play, simple life</string>
    <string name="dealby">What to do?</string>
    <string name="about">developer: dev@dirplayer.com</string>
    <string name="help">Help</string>
    <string name="action_settings">Setting</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Left</string>
    <string name="title_section2">Right</string>
    <string name="title_section3">BookMark</string>
    <string name="title_section4">Play</string>
    <string name="sys_notice">Press twice to exit</string>
    <string name="sys_external_storage">sys_external_storage</string>
    <string name="sys_sdcard">sdcard</string>
    <string name="sys_music">sys_music</string>
    <string name="sys_movie">sys_movie</string>
        
<!--     	左右文件浏览窗口操作命令 -->
    <string name="prompt">What to do?</string>
    <string name="flc_ibn_add">Add to playlist</string>
    <string name="flc_ibn_l2r_copy">Copy left to right-&gt;</string>
    <string name="flc_ibn_l2r_move">Move left to right=&gt;</string>
    <string name="flc_ibn_r2l_copy">&lt;-Copy right to left</string>
    <string name="flc_ibn_r2l_move">&lt;=Move right to left</string>
    <string name="flc_ibn_del">Del</string>
    <string name="flc_ibn_mkdir">New folder</string>
    <string name="flc_ibn_rename">Rename</string>
    <string name="flc_ibn_pause">Pause</string>
    <string name="flc_ibn_play">Play</string>
    <string name="fl_act1">All</string>
    <string name="fl_act2">Clr</string>
    <string name="fl_act3">Rev</string>
    <string name="fl_act4">Up</string>
    <string name="fl_act5">Mark</string>
    <string name="fl_act6">Op</string>
    <string name="cancel_copy">Cancel subsequent copy</string>
    <string name="background_copy">Backgrand copy</string>
    <string name="negative">Cancel</string>
    <string name="positive">OK</string>
    <string name="mkdir_prompt">New folder name?</string>
    <string name="progress_prompt">Progress</string>
    <string name="left_window_path">left_window_path</string>
    <string name="right_window_path">right_window_path</string>
    <string name="rename_prompt">Rename</string>
    <string name="rename_origin_prompt">Old:</string>
    <string name="rename_new_prompt">New:</string>
    <string name="rename_negative">Cancel</string>
    <string name="rename_neutral">Cancel all</string>
    <string name="rename_positive">OK</string>
    <string name="rename_fail_notice">Rename failed.</string>
    <string name="fl_err_notice1">Here is the toppest layer.</string>
    <string name="fl_err_notice2">Create directory failed for some problem.</string>

<!--     	收藏窗口操作命令 -->
    <string name="bookmark_prompt">What to do?</string>
    <string name="bmc_ibn_add">Add to playlist</string>
    <string name="bmc_ibn_copy_2_left">&lt;-Copy to left</string>
    <string name="bmc_ibn_copy_2_right">Copy to right-&gt;</string>
    <string name="bmc_ibn_move_2_left">&lt;=Move to left</string>
    <string name="bmc_ibn_move_2_right">Move to right=&gt;</string>
    <string name="bmc_ibn_del">Del</string>
    <string name="bm_act1">All</string>
    <string name="bm_act2">Clr</string>
    <string name="bm_act3">Rev</string>
    <string name="bm_act4">Up</string>
    <string name="bm_act5">Down</string>
    <string name="bm_act6">Op</string>
    <string name="bm_act_err">The path is not exist now.</string>
    <string name="bm_act_notice">You add favority:  </string>
    <string name="bm_act_notice2"> etc.</string>
    
<!--     	播放窗口操作命令 -->
    <string name="plc_ibn_add">Add to bookmark</string>
    <string name="plc_ibn_del">Del</string>
    <string name="plc_ibn_seq">Switch play order</string>
    <string name="pl_act1">All</string>
    <string name="pl_act2">Clr</string>
    <string name="pl_act3">Rev</string>
    <string name="pl_act4">Up</string>
    <string name="pl_act5">Down</string>
    <string name="pl_act6">Op</string>
    <string name="play_seq_normal">Normal</string>
    <string name="play_seq_random">Random</string>
    <string name="play_seq_single">Single</string>
    <string name="notification_goto_last">Last</string>
    <string name="notification_goto_next">Next</string>
    <string name="notification_goto_pause">Pause</string>
    <string name="notification_goto_play">Play</string>
    <string name="notification_back_msg">Back to player</string>
    <string name="mediacontroller_prompt">System notification has media controller</string>


<!--     	设置相关 -->

    <string name="setting1_key">setting_key</string>
    <string name="setting1_title">是否显示顶部标题条</string>
    <string name="seting1_summ">目前选择显示顶部标题条</string>
    <string name="seting1_summ2">目前选择隐藏顶部标题条</string>

</resources>