<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/flc_ibn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flc_ibn_add" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/flc_ibn_l2r_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_l2r_copy" />
        <Button
            android:id="@+id/flc_ibn_r2l_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_r2l_copy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/flc_ibn_l2r_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_l2r_move" />
        <Button
            android:id="@+id/flc_ibn_r2l_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_r2l_move" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/flc_ibn_rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_rename" />
        <Button
            android:id="@+id/flc_ibn_del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flc_ibn_del" />
    </LinearLayout>

        <Button
            android:id="@+id/flc_ibn_mkdir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flc_ibn_mkdir" />
        
    
</LinearLayout>