<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fl_b1"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act1" />

        <Button
            android:id="@+id/fl_b2"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act2" />

        <Button
            android:id="@+id/fl_b3"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act3" />

        <Button
            android:id="@+id/fl_b4"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act4" />

        <Button
            android:id="@+id/fl_b5"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act5" />
        
        <Button
            android:id="@+id/fl_b6"
            android:layout_width="0dp"
            android:layout_weight="1"  
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fl_act6" />

        
        </LinearLayout>

  

    	<ListView 
        android:id="@+id/fragment_listview"
    	android:layout_width="match_parent"
        android:layout_height="0dp"          
        android:layout_weight="1"  
        	
        />
    	
    <TextView
        android:id="@+id/show_path"
        style="@style/lvRowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
