<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/plc_ibn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plc_ibn_add" />

    <Button
        android:id="@+id/plc_ibn_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plc_ibn_del" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/dirplayer_notify_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pl_playing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/bottom_about"
            android:textColor="@color/dirplayer_notify_text"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/plc_ibn_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_goto_pause" />

            <Button
                android:id="@+id/plc_ibn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_goto_next" />
            <Button
                android:id="@+id/plc_ibn_seq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_seq_normal" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/plc_ibn_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>