<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pl_b1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act1" />

        <Button
            android:id="@+id/pl_b2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act2" />

        <Button
            android:id="@+id/pl_b3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act3" />

        <Button
            android:id="@+id/pl_b4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act4" />

        <Button
            android:id="@+id/pl_b5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act5" />

        <Button
            android:id="@+id/pl_b6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/pl_act6" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

            <ListView
                android:id="@+id/fragment_playlist_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

            <ListView
                android:id="@+id/fragment_playlist_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />


            <ListView
                android:id="@+id/fragment_playlist_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

            <ListView
                android:id="@+id/fragment_playlist_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />


            <ListView
                android:id="@+id/fragment_playlist_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pl_tab_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pl_radio_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <Button
            android:id="@+id/pl_radio_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2" />

        <Button
            android:id="@+id/pl_radio_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3" />

        <Button
            android:id="@+id/pl_radio_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />

        <Button
            android:id="@+id/pl_radio_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5" />
    </LinearLayout>

</LinearLayout>