<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/notify_layout"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/notification_infor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/notification_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"            
	        android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:singleLine="true"
            android:textColor="@color/dirplayer_notify_text"
            android:text="@string/bottom_about" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/notification_goto_pause"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="15sp"
                android:background="@drawable/notify_button"
                android:textColor="@color/dirplayer_notify_text"
                android:text="@string/notification_goto_pause" />
            
            
            <Button
                android:id="@+id/notification_goto_next"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
				android:paddingLeft="8dp"
                android:paddingRight="8dp"                
                android:textSize="15sp"
                android:background="@drawable/notify_button"
                android:textColor="@color/dirplayer_notify_text"
                android:text="@string/notification_goto_next" />
            
            <Button
                android:id="@+id/notification_seq"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
				android:paddingLeft="8dp"
                android:paddingRight="8dp"                
                android:textSize="15sp"
                android:background="@drawable/notify_button"
                android:textColor="@color/dirplayer_notify_text"
                android:text="@string/play_seq_normal" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>